parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BREAK
    COMMENTS
    CONTINUE
    FOR
    IN
    NOT
    RANGE
    SEP
    WHILE

Grammar

Rule 0     S' -> statements
Rule 1     statements -> statements statement
Rule 2     statements -> empty
Rule 3     statement -> assignment
Rule 4     statement -> if
Rule 5     statement -> expr
Rule 6     if -> IF expr COLON LBRACE statements RBRACE elif
Rule 7     elif -> ELIF expr COLON LBRACE statements RBRACE elif
Rule 8     elif -> else
Rule 9     else -> ELSE COLON LBRACE statements RBRACE
Rule 10    else -> empty
Rule 11    assignment -> ID EQ expr
Rule 12    expr -> expr operator expr
Rule 13    expr -> expr relop expr
Rule 14    expr -> expr logic expr
Rule 15    expr -> ID
Rule 16    expr -> NUMBER
Rule 17    operator -> TIMES
Rule 18    operator -> DIV
Rule 19    operator -> PLUS
Rule 20    operator -> MINUS
Rule 21    operator -> MOD
Rule 22    logic -> AND
Rule 23    logic -> OR
Rule 24    relop -> LT
Rule 25    relop -> LTE
Rule 26    relop -> GT
Rule 27    relop -> GTE
Rule 28    relop -> EQU
Rule 29    relop -> NEQU
Rule 30    expr -> LPRAN expr RPRAN
Rule 31    empty -> <empty>

Terminals, with rules where they appear

AND                  : 22
BREAK                : 
COLON                : 6 7 9
COMMENTS             : 
CONTINUE             : 
DIV                  : 18
ELIF                 : 7
ELSE                 : 9
EQ                   : 11
EQU                  : 28
FOR                  : 
GT                   : 26
GTE                  : 27
ID                   : 11 15
IF                   : 6
IN                   : 
LBRACE               : 6 7 9
LPRAN                : 30
LT                   : 24
LTE                  : 25
MINUS                : 20
MOD                  : 21
NEQU                 : 29
NOT                  : 
NUMBER               : 16
OR                   : 23
PLUS                 : 19
RANGE                : 
RBRACE               : 6 7 9
RPRAN                : 30
SEP                  : 
TIMES                : 17
WHILE                : 
error                : 

Nonterminals, with rules where they appear

assignment           : 3
elif                 : 6 7
else                 : 8
empty                : 2 10
expr                 : 5 6 7 11 12 12 13 13 14 14 30
if                   : 4
logic                : 14
operator             : 12
relop                : 13
statement            : 1
statements           : 1 6 7 9 0

Parsing method: LALR

state 0

    (0) S' -> . statements
    (1) statements -> . statements statement
    (2) statements -> . empty
    (31) empty -> .

    ID              reduce using rule 31 (empty -> .)
    IF              reduce using rule 31 (empty -> .)
    NUMBER          reduce using rule 31 (empty -> .)
    LPRAN           reduce using rule 31 (empty -> .)
    $end            reduce using rule 31 (empty -> .)

    statements                     shift and go to state 1
    empty                          shift and go to state 2

state 1

    (0) S' -> statements .
    (1) statements -> statements . statement
    (3) statement -> . assignment
    (4) statement -> . if
    (5) statement -> . expr
    (11) assignment -> . ID EQ expr
    (6) if -> . IF expr COLON LBRACE statements RBRACE elif
    (12) expr -> . expr operator expr
    (13) expr -> . expr relop expr
    (14) expr -> . expr logic expr
    (15) expr -> . ID
    (16) expr -> . NUMBER
    (30) expr -> . LPRAN expr RPRAN

    ID              shift and go to state 7
    IF              shift and go to state 8
    NUMBER          shift and go to state 9
    LPRAN           shift and go to state 10

    statement                      shift and go to state 3
    assignment                     shift and go to state 4
    if                             shift and go to state 5
    expr                           shift and go to state 6

state 2

    (2) statements -> empty .

    ID              reduce using rule 2 (statements -> empty .)
    IF              reduce using rule 2 (statements -> empty .)
    NUMBER          reduce using rule 2 (statements -> empty .)
    LPRAN           reduce using rule 2 (statements -> empty .)
    $end            reduce using rule 2 (statements -> empty .)
    RBRACE          reduce using rule 2 (statements -> empty .)


state 3

    (1) statements -> statements statement .

    ID              reduce using rule 1 (statements -> statements statement .)
    IF              reduce using rule 1 (statements -> statements statement .)
    NUMBER          reduce using rule 1 (statements -> statements statement .)
    LPRAN           reduce using rule 1 (statements -> statements statement .)
    $end            reduce using rule 1 (statements -> statements statement .)
    RBRACE          reduce using rule 1 (statements -> statements statement .)


state 4

    (3) statement -> assignment .

    ID              reduce using rule 3 (statement -> assignment .)
    IF              reduce using rule 3 (statement -> assignment .)
    NUMBER          reduce using rule 3 (statement -> assignment .)
    LPRAN           reduce using rule 3 (statement -> assignment .)
    $end            reduce using rule 3 (statement -> assignment .)
    RBRACE          reduce using rule 3 (statement -> assignment .)


state 5

    (4) statement -> if .

    ID              reduce using rule 4 (statement -> if .)
    IF              reduce using rule 4 (statement -> if .)
    NUMBER          reduce using rule 4 (statement -> if .)
    LPRAN           reduce using rule 4 (statement -> if .)
    $end            reduce using rule 4 (statement -> if .)
    RBRACE          reduce using rule 4 (statement -> if .)


state 6

    (5) statement -> expr .
    (12) expr -> expr . operator expr
    (13) expr -> expr . relop expr
    (14) expr -> expr . logic expr
    (17) operator -> . TIMES
    (18) operator -> . DIV
    (19) operator -> . PLUS
    (20) operator -> . MINUS
    (21) operator -> . MOD
    (24) relop -> . LT
    (25) relop -> . LTE
    (26) relop -> . GT
    (27) relop -> . GTE
    (28) relop -> . EQU
    (29) relop -> . NEQU
    (22) logic -> . AND
    (23) logic -> . OR

    ID              reduce using rule 5 (statement -> expr .)
    IF              reduce using rule 5 (statement -> expr .)
    NUMBER          reduce using rule 5 (statement -> expr .)
    LPRAN           reduce using rule 5 (statement -> expr .)
    $end            reduce using rule 5 (statement -> expr .)
    RBRACE          reduce using rule 5 (statement -> expr .)
    TIMES           shift and go to state 14
    DIV             shift and go to state 15
    PLUS            shift and go to state 16
    MINUS           shift and go to state 17
    MOD             shift and go to state 18
    LT              shift and go to state 19
    LTE             shift and go to state 20
    GT              shift and go to state 21
    GTE             shift and go to state 22
    EQU             shift and go to state 23
    NEQU            shift and go to state 24
    AND             shift and go to state 25
    OR              shift and go to state 26

    operator                       shift and go to state 11
    relop                          shift and go to state 12
    logic                          shift and go to state 13

state 7

    (11) assignment -> ID . EQ expr
    (15) expr -> ID .

    EQ              shift and go to state 27
    TIMES           reduce using rule 15 (expr -> ID .)
    DIV             reduce using rule 15 (expr -> ID .)
    PLUS            reduce using rule 15 (expr -> ID .)
    MINUS           reduce using rule 15 (expr -> ID .)
    MOD             reduce using rule 15 (expr -> ID .)
    LT              reduce using rule 15 (expr -> ID .)
    LTE             reduce using rule 15 (expr -> ID .)
    GT              reduce using rule 15 (expr -> ID .)
    GTE             reduce using rule 15 (expr -> ID .)
    EQU             reduce using rule 15 (expr -> ID .)
    NEQU            reduce using rule 15 (expr -> ID .)
    AND             reduce using rule 15 (expr -> ID .)
    OR              reduce using rule 15 (expr -> ID .)
    ID              reduce using rule 15 (expr -> ID .)
    IF              reduce using rule 15 (expr -> ID .)
    NUMBER          reduce using rule 15 (expr -> ID .)
    LPRAN           reduce using rule 15 (expr -> ID .)
    $end            reduce using rule 15 (expr -> ID .)
    RBRACE          reduce using rule 15 (expr -> ID .)


state 8

    (6) if -> IF . expr COLON LBRACE statements RBRACE elif
    (12) expr -> . expr operator expr
    (13) expr -> . expr relop expr
    (14) expr -> . expr logic expr
    (15) expr -> . ID
    (16) expr -> . NUMBER
    (30) expr -> . LPRAN expr RPRAN

    ID              shift and go to state 29
    NUMBER          shift and go to state 9
    LPRAN           shift and go to state 10

    expr                           shift and go to state 28

state 9

    (16) expr -> NUMBER .

    TIMES           reduce using rule 16 (expr -> NUMBER .)
    DIV             reduce using rule 16 (expr -> NUMBER .)
    PLUS            reduce using rule 16 (expr -> NUMBER .)
    MINUS           reduce using rule 16 (expr -> NUMBER .)
    MOD             reduce using rule 16 (expr -> NUMBER .)
    LT              reduce using rule 16 (expr -> NUMBER .)
    LTE             reduce using rule 16 (expr -> NUMBER .)
    GT              reduce using rule 16 (expr -> NUMBER .)
    GTE             reduce using rule 16 (expr -> NUMBER .)
    EQU             reduce using rule 16 (expr -> NUMBER .)
    NEQU            reduce using rule 16 (expr -> NUMBER .)
    AND             reduce using rule 16 (expr -> NUMBER .)
    OR              reduce using rule 16 (expr -> NUMBER .)
    ID              reduce using rule 16 (expr -> NUMBER .)
    IF              reduce using rule 16 (expr -> NUMBER .)
    NUMBER          reduce using rule 16 (expr -> NUMBER .)
    LPRAN           reduce using rule 16 (expr -> NUMBER .)
    $end            reduce using rule 16 (expr -> NUMBER .)
    COLON           reduce using rule 16 (expr -> NUMBER .)
    RPRAN           reduce using rule 16 (expr -> NUMBER .)
    RBRACE          reduce using rule 16 (expr -> NUMBER .)


state 10

    (30) expr -> LPRAN . expr RPRAN
    (12) expr -> . expr operator expr
    (13) expr -> . expr relop expr
    (14) expr -> . expr logic expr
    (15) expr -> . ID
    (16) expr -> . NUMBER
    (30) expr -> . LPRAN expr RPRAN

    ID              shift and go to state 29
    NUMBER          shift and go to state 9
    LPRAN           shift and go to state 10

    expr                           shift and go to state 30

state 11

    (12) expr -> expr operator . expr
    (12) expr -> . expr operator expr
    (13) expr -> . expr relop expr
    (14) expr -> . expr logic expr
    (15) expr -> . ID
    (16) expr -> . NUMBER
    (30) expr -> . LPRAN expr RPRAN

    ID              shift and go to state 29
    NUMBER          shift and go to state 9
    LPRAN           shift and go to state 10

    expr                           shift and go to state 31

state 12

    (13) expr -> expr relop . expr
    (12) expr -> . expr operator expr
    (13) expr -> . expr relop expr
    (14) expr -> . expr logic expr
    (15) expr -> . ID
    (16) expr -> . NUMBER
    (30) expr -> . LPRAN expr RPRAN

    ID              shift and go to state 29
    NUMBER          shift and go to state 9
    LPRAN           shift and go to state 10

    expr                           shift and go to state 32

state 13

    (14) expr -> expr logic . expr
    (12) expr -> . expr operator expr
    (13) expr -> . expr relop expr
    (14) expr -> . expr logic expr
    (15) expr -> . ID
    (16) expr -> . NUMBER
    (30) expr -> . LPRAN expr RPRAN

    ID              shift and go to state 29
    NUMBER          shift and go to state 9
    LPRAN           shift and go to state 10

    expr                           shift and go to state 33

state 14

    (17) operator -> TIMES .

    ID              reduce using rule 17 (operator -> TIMES .)
    NUMBER          reduce using rule 17 (operator -> TIMES .)
    LPRAN           reduce using rule 17 (operator -> TIMES .)


state 15

    (18) operator -> DIV .

    ID              reduce using rule 18 (operator -> DIV .)
    NUMBER          reduce using rule 18 (operator -> DIV .)
    LPRAN           reduce using rule 18 (operator -> DIV .)


state 16

    (19) operator -> PLUS .

    ID              reduce using rule 19 (operator -> PLUS .)
    NUMBER          reduce using rule 19 (operator -> PLUS .)
    LPRAN           reduce using rule 19 (operator -> PLUS .)


state 17

    (20) operator -> MINUS .

    ID              reduce using rule 20 (operator -> MINUS .)
    NUMBER          reduce using rule 20 (operator -> MINUS .)
    LPRAN           reduce using rule 20 (operator -> MINUS .)


state 18

    (21) operator -> MOD .

    ID              reduce using rule 21 (operator -> MOD .)
    NUMBER          reduce using rule 21 (operator -> MOD .)
    LPRAN           reduce using rule 21 (operator -> MOD .)


state 19

    (24) relop -> LT .

    ID              reduce using rule 24 (relop -> LT .)
    NUMBER          reduce using rule 24 (relop -> LT .)
    LPRAN           reduce using rule 24 (relop -> LT .)


state 20

    (25) relop -> LTE .

    ID              reduce using rule 25 (relop -> LTE .)
    NUMBER          reduce using rule 25 (relop -> LTE .)
    LPRAN           reduce using rule 25 (relop -> LTE .)


state 21

    (26) relop -> GT .

    ID              reduce using rule 26 (relop -> GT .)
    NUMBER          reduce using rule 26 (relop -> GT .)
    LPRAN           reduce using rule 26 (relop -> GT .)


state 22

    (27) relop -> GTE .

    ID              reduce using rule 27 (relop -> GTE .)
    NUMBER          reduce using rule 27 (relop -> GTE .)
    LPRAN           reduce using rule 27 (relop -> GTE .)


state 23

    (28) relop -> EQU .

    ID              reduce using rule 28 (relop -> EQU .)
    NUMBER          reduce using rule 28 (relop -> EQU .)
    LPRAN           reduce using rule 28 (relop -> EQU .)


state 24

    (29) relop -> NEQU .

    ID              reduce using rule 29 (relop -> NEQU .)
    NUMBER          reduce using rule 29 (relop -> NEQU .)
    LPRAN           reduce using rule 29 (relop -> NEQU .)


state 25

    (22) logic -> AND .

    ID              reduce using rule 22 (logic -> AND .)
    NUMBER          reduce using rule 22 (logic -> AND .)
    LPRAN           reduce using rule 22 (logic -> AND .)


state 26

    (23) logic -> OR .

    ID              reduce using rule 23 (logic -> OR .)
    NUMBER          reduce using rule 23 (logic -> OR .)
    LPRAN           reduce using rule 23 (logic -> OR .)


state 27

    (11) assignment -> ID EQ . expr
    (12) expr -> . expr operator expr
    (13) expr -> . expr relop expr
    (14) expr -> . expr logic expr
    (15) expr -> . ID
    (16) expr -> . NUMBER
    (30) expr -> . LPRAN expr RPRAN

    ID              shift and go to state 29
    NUMBER          shift and go to state 9
    LPRAN           shift and go to state 10

    expr                           shift and go to state 34

state 28

    (6) if -> IF expr . COLON LBRACE statements RBRACE elif
    (12) expr -> expr . operator expr
    (13) expr -> expr . relop expr
    (14) expr -> expr . logic expr
    (17) operator -> . TIMES
    (18) operator -> . DIV
    (19) operator -> . PLUS
    (20) operator -> . MINUS
    (21) operator -> . MOD
    (24) relop -> . LT
    (25) relop -> . LTE
    (26) relop -> . GT
    (27) relop -> . GTE
    (28) relop -> . EQU
    (29) relop -> . NEQU
    (22) logic -> . AND
    (23) logic -> . OR

    COLON           shift and go to state 35
    TIMES           shift and go to state 14
    DIV             shift and go to state 15
    PLUS            shift and go to state 16
    MINUS           shift and go to state 17
    MOD             shift and go to state 18
    LT              shift and go to state 19
    LTE             shift and go to state 20
    GT              shift and go to state 21
    GTE             shift and go to state 22
    EQU             shift and go to state 23
    NEQU            shift and go to state 24
    AND             shift and go to state 25
    OR              shift and go to state 26

    operator                       shift and go to state 11
    relop                          shift and go to state 12
    logic                          shift and go to state 13

state 29

    (15) expr -> ID .

    COLON           reduce using rule 15 (expr -> ID .)
    TIMES           reduce using rule 15 (expr -> ID .)
    DIV             reduce using rule 15 (expr -> ID .)
    PLUS            reduce using rule 15 (expr -> ID .)
    MINUS           reduce using rule 15 (expr -> ID .)
    MOD             reduce using rule 15 (expr -> ID .)
    LT              reduce using rule 15 (expr -> ID .)
    LTE             reduce using rule 15 (expr -> ID .)
    GT              reduce using rule 15 (expr -> ID .)
    GTE             reduce using rule 15 (expr -> ID .)
    EQU             reduce using rule 15 (expr -> ID .)
    NEQU            reduce using rule 15 (expr -> ID .)
    AND             reduce using rule 15 (expr -> ID .)
    OR              reduce using rule 15 (expr -> ID .)
    RPRAN           reduce using rule 15 (expr -> ID .)
    ID              reduce using rule 15 (expr -> ID .)
    IF              reduce using rule 15 (expr -> ID .)
    NUMBER          reduce using rule 15 (expr -> ID .)
    LPRAN           reduce using rule 15 (expr -> ID .)
    $end            reduce using rule 15 (expr -> ID .)
    RBRACE          reduce using rule 15 (expr -> ID .)


state 30

    (30) expr -> LPRAN expr . RPRAN
    (12) expr -> expr . operator expr
    (13) expr -> expr . relop expr
    (14) expr -> expr . logic expr
    (17) operator -> . TIMES
    (18) operator -> . DIV
    (19) operator -> . PLUS
    (20) operator -> . MINUS
    (21) operator -> . MOD
    (24) relop -> . LT
    (25) relop -> . LTE
    (26) relop -> . GT
    (27) relop -> . GTE
    (28) relop -> . EQU
    (29) relop -> . NEQU
    (22) logic -> . AND
    (23) logic -> . OR

    RPRAN           shift and go to state 36
    TIMES           shift and go to state 14
    DIV             shift and go to state 15
    PLUS            shift and go to state 16
    MINUS           shift and go to state 17
    MOD             shift and go to state 18
    LT              shift and go to state 19
    LTE             shift and go to state 20
    GT              shift and go to state 21
    GTE             shift and go to state 22
    EQU             shift and go to state 23
    NEQU            shift and go to state 24
    AND             shift and go to state 25
    OR              shift and go to state 26

    operator                       shift and go to state 11
    relop                          shift and go to state 12
    logic                          shift and go to state 13

state 31

    (12) expr -> expr operator expr .
    (12) expr -> expr . operator expr
    (13) expr -> expr . relop expr
    (14) expr -> expr . logic expr
    (17) operator -> . TIMES
    (18) operator -> . DIV
    (19) operator -> . PLUS
    (20) operator -> . MINUS
    (21) operator -> . MOD
    (24) relop -> . LT
    (25) relop -> . LTE
    (26) relop -> . GT
    (27) relop -> . GTE
    (28) relop -> . EQU
    (29) relop -> . NEQU
    (22) logic -> . AND
    (23) logic -> . OR

  ! shift/reduce conflict for TIMES resolved as shift
  ! shift/reduce conflict for DIV resolved as shift
  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for MOD resolved as shift
  ! shift/reduce conflict for LT resolved as shift
  ! shift/reduce conflict for LTE resolved as shift
  ! shift/reduce conflict for GT resolved as shift
  ! shift/reduce conflict for GTE resolved as shift
  ! shift/reduce conflict for EQU resolved as shift
  ! shift/reduce conflict for NEQU resolved as shift
  ! shift/reduce conflict for AND resolved as shift
  ! shift/reduce conflict for OR resolved as shift
    ID              reduce using rule 12 (expr -> expr operator expr .)
    IF              reduce using rule 12 (expr -> expr operator expr .)
    NUMBER          reduce using rule 12 (expr -> expr operator expr .)
    LPRAN           reduce using rule 12 (expr -> expr operator expr .)
    $end            reduce using rule 12 (expr -> expr operator expr .)
    COLON           reduce using rule 12 (expr -> expr operator expr .)
    RPRAN           reduce using rule 12 (expr -> expr operator expr .)
    RBRACE          reduce using rule 12 (expr -> expr operator expr .)
    TIMES           shift and go to state 14
    DIV             shift and go to state 15
    PLUS            shift and go to state 16
    MINUS           shift and go to state 17
    MOD             shift and go to state 18
    LT              shift and go to state 19
    LTE             shift and go to state 20
    GT              shift and go to state 21
    GTE             shift and go to state 22
    EQU             shift and go to state 23
    NEQU            shift and go to state 24
    AND             shift and go to state 25
    OR              shift and go to state 26

  ! TIMES           [ reduce using rule 12 (expr -> expr operator expr .) ]
  ! DIV             [ reduce using rule 12 (expr -> expr operator expr .) ]
  ! PLUS            [ reduce using rule 12 (expr -> expr operator expr .) ]
  ! MINUS           [ reduce using rule 12 (expr -> expr operator expr .) ]
  ! MOD             [ reduce using rule 12 (expr -> expr operator expr .) ]
  ! LT              [ reduce using rule 12 (expr -> expr operator expr .) ]
  ! LTE             [ reduce using rule 12 (expr -> expr operator expr .) ]
  ! GT              [ reduce using rule 12 (expr -> expr operator expr .) ]
  ! GTE             [ reduce using rule 12 (expr -> expr operator expr .) ]
  ! EQU             [ reduce using rule 12 (expr -> expr operator expr .) ]
  ! NEQU            [ reduce using rule 12 (expr -> expr operator expr .) ]
  ! AND             [ reduce using rule 12 (expr -> expr operator expr .) ]
  ! OR              [ reduce using rule 12 (expr -> expr operator expr .) ]

    operator                       shift and go to state 11
    relop                          shift and go to state 12
    logic                          shift and go to state 13

state 32

    (13) expr -> expr relop expr .
    (12) expr -> expr . operator expr
    (13) expr -> expr . relop expr
    (14) expr -> expr . logic expr
    (17) operator -> . TIMES
    (18) operator -> . DIV
    (19) operator -> . PLUS
    (20) operator -> . MINUS
    (21) operator -> . MOD
    (24) relop -> . LT
    (25) relop -> . LTE
    (26) relop -> . GT
    (27) relop -> . GTE
    (28) relop -> . EQU
    (29) relop -> . NEQU
    (22) logic -> . AND
    (23) logic -> . OR

  ! shift/reduce conflict for TIMES resolved as shift
  ! shift/reduce conflict for DIV resolved as shift
  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for MOD resolved as shift
  ! shift/reduce conflict for LT resolved as shift
  ! shift/reduce conflict for LTE resolved as shift
  ! shift/reduce conflict for GT resolved as shift
  ! shift/reduce conflict for GTE resolved as shift
  ! shift/reduce conflict for EQU resolved as shift
  ! shift/reduce conflict for NEQU resolved as shift
  ! shift/reduce conflict for AND resolved as shift
  ! shift/reduce conflict for OR resolved as shift
    ID              reduce using rule 13 (expr -> expr relop expr .)
    IF              reduce using rule 13 (expr -> expr relop expr .)
    NUMBER          reduce using rule 13 (expr -> expr relop expr .)
    LPRAN           reduce using rule 13 (expr -> expr relop expr .)
    $end            reduce using rule 13 (expr -> expr relop expr .)
    COLON           reduce using rule 13 (expr -> expr relop expr .)
    RPRAN           reduce using rule 13 (expr -> expr relop expr .)
    RBRACE          reduce using rule 13 (expr -> expr relop expr .)
    TIMES           shift and go to state 14
    DIV             shift and go to state 15
    PLUS            shift and go to state 16
    MINUS           shift and go to state 17
    MOD             shift and go to state 18
    LT              shift and go to state 19
    LTE             shift and go to state 20
    GT              shift and go to state 21
    GTE             shift and go to state 22
    EQU             shift and go to state 23
    NEQU            shift and go to state 24
    AND             shift and go to state 25
    OR              shift and go to state 26

  ! TIMES           [ reduce using rule 13 (expr -> expr relop expr .) ]
  ! DIV             [ reduce using rule 13 (expr -> expr relop expr .) ]
  ! PLUS            [ reduce using rule 13 (expr -> expr relop expr .) ]
  ! MINUS           [ reduce using rule 13 (expr -> expr relop expr .) ]
  ! MOD             [ reduce using rule 13 (expr -> expr relop expr .) ]
  ! LT              [ reduce using rule 13 (expr -> expr relop expr .) ]
  ! LTE             [ reduce using rule 13 (expr -> expr relop expr .) ]
  ! GT              [ reduce using rule 13 (expr -> expr relop expr .) ]
  ! GTE             [ reduce using rule 13 (expr -> expr relop expr .) ]
  ! EQU             [ reduce using rule 13 (expr -> expr relop expr .) ]
  ! NEQU            [ reduce using rule 13 (expr -> expr relop expr .) ]
  ! AND             [ reduce using rule 13 (expr -> expr relop expr .) ]
  ! OR              [ reduce using rule 13 (expr -> expr relop expr .) ]

    relop                          shift and go to state 12
    operator                       shift and go to state 11
    logic                          shift and go to state 13

state 33

    (14) expr -> expr logic expr .
    (12) expr -> expr . operator expr
    (13) expr -> expr . relop expr
    (14) expr -> expr . logic expr
    (17) operator -> . TIMES
    (18) operator -> . DIV
    (19) operator -> . PLUS
    (20) operator -> . MINUS
    (21) operator -> . MOD
    (24) relop -> . LT
    (25) relop -> . LTE
    (26) relop -> . GT
    (27) relop -> . GTE
    (28) relop -> . EQU
    (29) relop -> . NEQU
    (22) logic -> . AND
    (23) logic -> . OR

  ! shift/reduce conflict for TIMES resolved as shift
  ! shift/reduce conflict for DIV resolved as shift
  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for MOD resolved as shift
  ! shift/reduce conflict for LT resolved as shift
  ! shift/reduce conflict for LTE resolved as shift
  ! shift/reduce conflict for GT resolved as shift
  ! shift/reduce conflict for GTE resolved as shift
  ! shift/reduce conflict for EQU resolved as shift
  ! shift/reduce conflict for NEQU resolved as shift
  ! shift/reduce conflict for AND resolved as shift
  ! shift/reduce conflict for OR resolved as shift
    ID              reduce using rule 14 (expr -> expr logic expr .)
    IF              reduce using rule 14 (expr -> expr logic expr .)
    NUMBER          reduce using rule 14 (expr -> expr logic expr .)
    LPRAN           reduce using rule 14 (expr -> expr logic expr .)
    $end            reduce using rule 14 (expr -> expr logic expr .)
    COLON           reduce using rule 14 (expr -> expr logic expr .)
    RPRAN           reduce using rule 14 (expr -> expr logic expr .)
    RBRACE          reduce using rule 14 (expr -> expr logic expr .)
    TIMES           shift and go to state 14
    DIV             shift and go to state 15
    PLUS            shift and go to state 16
    MINUS           shift and go to state 17
    MOD             shift and go to state 18
    LT              shift and go to state 19
    LTE             shift and go to state 20
    GT              shift and go to state 21
    GTE             shift and go to state 22
    EQU             shift and go to state 23
    NEQU            shift and go to state 24
    AND             shift and go to state 25
    OR              shift and go to state 26

  ! TIMES           [ reduce using rule 14 (expr -> expr logic expr .) ]
  ! DIV             [ reduce using rule 14 (expr -> expr logic expr .) ]
  ! PLUS            [ reduce using rule 14 (expr -> expr logic expr .) ]
  ! MINUS           [ reduce using rule 14 (expr -> expr logic expr .) ]
  ! MOD             [ reduce using rule 14 (expr -> expr logic expr .) ]
  ! LT              [ reduce using rule 14 (expr -> expr logic expr .) ]
  ! LTE             [ reduce using rule 14 (expr -> expr logic expr .) ]
  ! GT              [ reduce using rule 14 (expr -> expr logic expr .) ]
  ! GTE             [ reduce using rule 14 (expr -> expr logic expr .) ]
  ! EQU             [ reduce using rule 14 (expr -> expr logic expr .) ]
  ! NEQU            [ reduce using rule 14 (expr -> expr logic expr .) ]
  ! AND             [ reduce using rule 14 (expr -> expr logic expr .) ]
  ! OR              [ reduce using rule 14 (expr -> expr logic expr .) ]

    logic                          shift and go to state 13
    operator                       shift and go to state 11
    relop                          shift and go to state 12

state 34

    (11) assignment -> ID EQ expr .
    (12) expr -> expr . operator expr
    (13) expr -> expr . relop expr
    (14) expr -> expr . logic expr
    (17) operator -> . TIMES
    (18) operator -> . DIV
    (19) operator -> . PLUS
    (20) operator -> . MINUS
    (21) operator -> . MOD
    (24) relop -> . LT
    (25) relop -> . LTE
    (26) relop -> . GT
    (27) relop -> . GTE
    (28) relop -> . EQU
    (29) relop -> . NEQU
    (22) logic -> . AND
    (23) logic -> . OR

    ID              reduce using rule 11 (assignment -> ID EQ expr .)
    IF              reduce using rule 11 (assignment -> ID EQ expr .)
    NUMBER          reduce using rule 11 (assignment -> ID EQ expr .)
    LPRAN           reduce using rule 11 (assignment -> ID EQ expr .)
    $end            reduce using rule 11 (assignment -> ID EQ expr .)
    RBRACE          reduce using rule 11 (assignment -> ID EQ expr .)
    TIMES           shift and go to state 14
    DIV             shift and go to state 15
    PLUS            shift and go to state 16
    MINUS           shift and go to state 17
    MOD             shift and go to state 18
    LT              shift and go to state 19
    LTE             shift and go to state 20
    GT              shift and go to state 21
    GTE             shift and go to state 22
    EQU             shift and go to state 23
    NEQU            shift and go to state 24
    AND             shift and go to state 25
    OR              shift and go to state 26

    operator                       shift and go to state 11
    relop                          shift and go to state 12
    logic                          shift and go to state 13

state 35

    (6) if -> IF expr COLON . LBRACE statements RBRACE elif

    LBRACE          shift and go to state 37


state 36

    (30) expr -> LPRAN expr RPRAN .

    TIMES           reduce using rule 30 (expr -> LPRAN expr RPRAN .)
    DIV             reduce using rule 30 (expr -> LPRAN expr RPRAN .)
    PLUS            reduce using rule 30 (expr -> LPRAN expr RPRAN .)
    MINUS           reduce using rule 30 (expr -> LPRAN expr RPRAN .)
    MOD             reduce using rule 30 (expr -> LPRAN expr RPRAN .)
    LT              reduce using rule 30 (expr -> LPRAN expr RPRAN .)
    LTE             reduce using rule 30 (expr -> LPRAN expr RPRAN .)
    GT              reduce using rule 30 (expr -> LPRAN expr RPRAN .)
    GTE             reduce using rule 30 (expr -> LPRAN expr RPRAN .)
    EQU             reduce using rule 30 (expr -> LPRAN expr RPRAN .)
    NEQU            reduce using rule 30 (expr -> LPRAN expr RPRAN .)
    AND             reduce using rule 30 (expr -> LPRAN expr RPRAN .)
    OR              reduce using rule 30 (expr -> LPRAN expr RPRAN .)
    ID              reduce using rule 30 (expr -> LPRAN expr RPRAN .)
    IF              reduce using rule 30 (expr -> LPRAN expr RPRAN .)
    NUMBER          reduce using rule 30 (expr -> LPRAN expr RPRAN .)
    LPRAN           reduce using rule 30 (expr -> LPRAN expr RPRAN .)
    $end            reduce using rule 30 (expr -> LPRAN expr RPRAN .)
    COLON           reduce using rule 30 (expr -> LPRAN expr RPRAN .)
    RPRAN           reduce using rule 30 (expr -> LPRAN expr RPRAN .)
    RBRACE          reduce using rule 30 (expr -> LPRAN expr RPRAN .)


state 37

    (6) if -> IF expr COLON LBRACE . statements RBRACE elif
    (1) statements -> . statements statement
    (2) statements -> . empty
    (31) empty -> .

    RBRACE          reduce using rule 31 (empty -> .)
    ID              reduce using rule 31 (empty -> .)
    IF              reduce using rule 31 (empty -> .)
    NUMBER          reduce using rule 31 (empty -> .)
    LPRAN           reduce using rule 31 (empty -> .)

    statements                     shift and go to state 38
    empty                          shift and go to state 2

state 38

    (6) if -> IF expr COLON LBRACE statements . RBRACE elif
    (1) statements -> statements . statement
    (3) statement -> . assignment
    (4) statement -> . if
    (5) statement -> . expr
    (11) assignment -> . ID EQ expr
    (6) if -> . IF expr COLON LBRACE statements RBRACE elif
    (12) expr -> . expr operator expr
    (13) expr -> . expr relop expr
    (14) expr -> . expr logic expr
    (15) expr -> . ID
    (16) expr -> . NUMBER
    (30) expr -> . LPRAN expr RPRAN

    RBRACE          shift and go to state 39
    ID              shift and go to state 7
    IF              shift and go to state 8
    NUMBER          shift and go to state 9
    LPRAN           shift and go to state 10

    expr                           shift and go to state 6
    statement                      shift and go to state 3
    assignment                     shift and go to state 4
    if                             shift and go to state 5

state 39

    (6) if -> IF expr COLON LBRACE statements RBRACE . elif
    (7) elif -> . ELIF expr COLON LBRACE statements RBRACE elif
    (8) elif -> . else
    (9) else -> . ELSE COLON LBRACE statements RBRACE
    (10) else -> . empty
    (31) empty -> .

    ELIF            shift and go to state 41
    ELSE            shift and go to state 43
    ID              reduce using rule 31 (empty -> .)
    IF              reduce using rule 31 (empty -> .)
    NUMBER          reduce using rule 31 (empty -> .)
    LPRAN           reduce using rule 31 (empty -> .)
    $end            reduce using rule 31 (empty -> .)
    RBRACE          reduce using rule 31 (empty -> .)

    elif                           shift and go to state 40
    else                           shift and go to state 42
    empty                          shift and go to state 44

state 40

    (6) if -> IF expr COLON LBRACE statements RBRACE elif .

    ID              reduce using rule 6 (if -> IF expr COLON LBRACE statements RBRACE elif .)
    IF              reduce using rule 6 (if -> IF expr COLON LBRACE statements RBRACE elif .)
    NUMBER          reduce using rule 6 (if -> IF expr COLON LBRACE statements RBRACE elif .)
    LPRAN           reduce using rule 6 (if -> IF expr COLON LBRACE statements RBRACE elif .)
    $end            reduce using rule 6 (if -> IF expr COLON LBRACE statements RBRACE elif .)
    RBRACE          reduce using rule 6 (if -> IF expr COLON LBRACE statements RBRACE elif .)


state 41
